What's going on

--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>The test project</h1>
+    <div class="bootstrap">
+        <div class="grow"><p>Hola</p></div>
+        <div class="grow"></div>
+    </div>
 
 </body>
 </html>
