--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -9,31 +9,195 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-    <Section class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
-                </ul>
+    <Header class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand"><img src="Logo-Icon/Group 33072.png"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About us</a>
+              </li>
+              <li class="nav-item"> 
+                <a class="nav-link" href="#" tabindex="-1">Contact us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </Header>
+    <section class="container">
+      <div class="row">
+        <div class="col-md-5 gy-5">
+          <h1>BE THE PENGUINS OF WINTER</h1>
+          <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <button class="btn btn-primary">Buy Now</button>
+        </div>
+        <div class="col-md-7 d-flex justify-content-evenly">
+          <img src="image/Mask Group.png">
+        </div>
+      </div>
+    </section>
+    <section class="container mt-5">
+        <h3>WOMEN JACKET</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+          <div class="col shadow p-3 mb-5 bg-white rounded">
+            <div class="card h-100">
+              <img src="image/PngItem_2597366 1.png" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Amazing Jacket</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer d-flex">
+                <h4>$280</h4>
+                <button class="btn btn-success">Buy Now</button>
               </div>
             </div>
-          </nav>
-    </Section>
+          </div>
+          <div class="col shadow p-3 mb-5 bg-white rounded">
+            <div class="card h-100">
+              <img src="image/SeekPng 1.png" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Ladies Jacket</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer d-flex bd-highlight">
+                <h4>$280</h4>
+                <button class="btn btn-success">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col shadow p-3 mb-5 bg-white rounded">
+            <div class="card h-100">
+              <img src="image/image 15.png" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Leather Jacket</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer d-flex">
+                <h4>$280</h4>
+                <button class="btn btn-success">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+    <section class="container mt-5">
+      <h3>GENTS JACKET</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+        <div class="col shadow p-3 mb-5 bg-white rounded">
+          <div class="card h-100">
+            <img src="image/image 11.png" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Casual Jacket Men</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer d-flex">
+              <h4>$280</h4>
+              <button class="btn btn-success">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col shadow p-3 mb-5 bg-white rounded">
+          <div class="card h-100">
+            <img src="image/toppng 1.png" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Leather Jacket</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer d-flex bd-highlight">
+              <h4>$280</h4>
+              <button class="btn btn-success">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col shadow p-3 mb-5 bg-white rounded">
+          <div class="card h-100">
+            <img src="image/vippng 1.png" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Snowboard Jacket Mens</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer d-flex">
+              <h4>$280</h4>
+              <button class="btn btn-success">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
+  <section class="container">
+    <div class="row">
+      <div class="col-md-6 gy-5">
+       <div class="row d-flex shadow p-3 mb-5 bg-white rounded">
+         <div class="col-md-3"><img src="Logo-Icon/image 12.png"></div>
+         <div class="div col-md-9">
+           <h4>Find the Perfect Fit</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut cum, perferendis iusto voluptatibus et.
+          </p>
+          </div>
+       </div>
+       <div class="row d-flex shadow p-3 mb-5 bg-white rounded">
+        <div class="col-md-3"><img src="Logo-Icon/image 13.png"></div>
+        <div class="div col-md-9">
+          <h4>Free Exchanges</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut cum, perferendis iusto voluptatibus et.
+          </p>
+        </div>
+       </div>
+       <div class="row d-flex shadow p-3 mb-5 bg-white rounded">
+        <div class="col-md-3"><img src="Logo-Icon/image 14.png"></div>
+        <div class="div col-md-9">
+          <h4>Contact our seller</h4>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut cum, perferendis iusto voluptatibus et.
+          </p>
+        </div>
+       </div>
+      </div>
+      <div class="col-md-6 d-flex justify-content-end">
+        <img src="Logo-Icon/XMLID 1.png">
+      </div>
+    </div>
+  </section>
+  <footer class="site-footer">
+    <div class="container mrgin">
+      <div class="row border bg-light shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="col-sm-12 col-md-6">
+          <h6>About US</h6>
+          <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quasi neque praesentium, incidunt eligendi sunt, aliquid eius perspiciatis nisi exercitationem debitis enim distinctio facere obcaecati nam asperiores dolore? Dicta, ducimus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quasi neque praesentium, incidunt eligendi sunt, aliquid eius perspiciatis.</p>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+          <h6>Categories</h6>
+          <ul class="footer-links">
+            <li><a href="#">Makshud</a></li>
+            <li><a href="#">Our Designs</a></li>
+            <li><a href="#">Languages</a></li>
+            <li><a href="#">Sales</a></li>
+            <li><a href="#">We're Hiring</a></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+          <h6>Quick Links</h6>
+          <ul class="footer-links">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Contribute</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Sitemap</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
