--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -39,11 +39,11 @@
       <div class="row">
         <div class="col-md-5 gy-5">
           <h1>BE THE PENGUINS OF WINTER</h1>
-          <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longe.</p>
           <button class="btn btn-primary">Buy Now</button>
         </div>
         <div class="col-md-7 d-flex justify-content-evenly">
-          <img src="image/Mask Group.png">
+          <img src="image/Mask Groupp.png">
         </div>
       </div>
     </section>
